tests/auto/declarative/qdeclarativeecmascript/tst_qdeclarativeecmascript.cpp
@@ -177,7 +177,7 @@ private slots:
     void sequenceConversionThreads();
     void sequenceConversionBindings();
     void sequenceConversionCopy();
-
+    void qtbug_22464();
     void bug1();
     void bug2();
     void dynamicCreationCrash();
@@ -1641,6 +1641,18 @@ void tst_qdeclarativeecmascript::undefinedResetsProperty()
 
     delete object;
     }
+}
+
+// Aliases to variant properties should work
+void tst_qdeclarativeecmascript::qtbug_22464()
+{
+    QDeclarativeComponent component(&engine, TEST_FILE("qtbug_22464.qml"));
+    QObject *object = component.create();
+    QVERIFY(object != 0);
+
+    QCOMPARE(object->property("test").toBool(), true);
+
+    delete object;
 }
 
 // QTBUG-6781
